# Tassel

./: .gitignore  AGENTS.md  CITATION.cff  CMakeLists.txt  LICENSE  NOTICE.md  README.md  main.js
.devcontainer/: devcontainer.json
cmake/: TasselDependencies.cmake  TasselProjectOptions.cmake  TasselTest.cmake
config/: euroc.yaml  euroc_stereo_vins.yaml  foxglove.yaml  foxglove_layout.json  log.cfg  stereo_vins.yaml  stereo_vio_viewer.foxglove.json  stereo_vio_viewer.yaml  tassel.yaml  test_viewer.foxglove.json  test_viewer.yaml  tumvi_room2.yaml
doc/: .~me_delay_estimation.docx  inertial_alignment.md  marginalize_sqrt_to_sqrt.md  sfm_initialization.md  so3_perturbation_derivation.md  time_delay_estimation.docx  time_delay_estimation.md  time_delay_motion_model.md
scripts/: generate_dongsi_gravity_coeff.py  generate_foxglove_layout.py  launch_foxglove.py  oak_imu_calib.py  profile.sh  read_dump_and_solve.py  setup_environment.sh  start_foxglove_bridge.sh  time_delay_sim.py  time_delay_sliding_window.py  validate_stereo_calib.py  verify_td_jacobian.py
tassel_core/: CMakeLists.txt
tassel_core/cam/: camera_base.h  camera_equi.h  camera_factory.h  camera_rad_tan.h
tassel_core/estimator/: delay_time_estimator.h  estimator.cpp  estimator.h  estimator_option.h  imu_interpolation.h  marginalization_layout.h  vio_estimator.cpp  vio_estimator.h  vo_estimator.cpp  vo_estimator.h  window_marginalization_plan.h
tassel_core/factor/: TwoViewFactor.cpp  TwoViewFactor.h  imu_block.h  imu_factor.h  initial_gravity_speed_factor.h  integrator_base.h  integrator_manager.h  landmark_block.cpp  landmark_block.h  marg_helper.h  marg_lin_data.h  marg_linearized_data.h  marginalization_prior_factor.cpp  marginalization_prior_factor.h  marginlization_sqrt.h  reprojection_factor.cpp  reprojection_factor.h  se3_right_manifold.cpp  se3_right_manifold.h  visual_factor.cpp  visual_factor.h  visual_reprojection.h
tassel_core/feature/: feature.cpp  feature.h
tassel_core/feature_manager/: feature_manager.cpp  feature_manager.h
tassel_core/feature_tracker/: feature_tracker.cpp  feature_tracker.h
tassel_core/frond_end/: feature.cpp  feature.h  feature_manager.cpp  feature_manager.h  feature_tracker.cpp  feature_tracker.h  reprojection.cpp  reprojection.h
tassel_core/initial/: dynamic_initializer.cpp  dynamic_initializer.h  initial_alignment.cpp  initial_alignment.h  initial_sfm.cpp  initial_sfm.h
tassel_core/linearization/: imu_block.cpp  imu_block.h  landmark_block.cpp  landmark_block.h  linearization_abs_qr.cpp  linearization_abs_qr.h  preintegrator.cpp  preintegrator.h
tassel_core/lm_optimizer/: lm_optimizer.cpp  lm_optimizer.h
tassel_core/loss_fuction/: loss_fuction_base.h
tassel_core/marg/: imu_block.h  landmark_block.cpp  landmark_block.h  marg_helper.cpp  marg_helper.h  marg_lin_data.h  marginalization_sqrt.h  marginlization_sqrt.h
tassel_core/marginalization/: abs_order_map.h  marg_helper.cpp  marg_helper.h  marg_linearized_data.h  pose_state_with_lin.h
tassel_core/optimizer/: lm_optimizer.cpp  lm_optimizer.h  optimizer.h  optimizer_option.h  summary.h
tassel_core/state/: state.cpp  state.h
tassel_core/tests/: imu_test_utils.h  test_camera.cpp  test_estimator.cpp  test_estimator_keyframe.cpp  test_euroc.cpp  test_feature.cpp  test_feature_manager.cpp  test_imu_factor.cpp  test_imu_interpolation.cpp  test_landmark_block.cpp  test_landmark_linearization.cpp  test_lm_optimizer.cpp  test_marg_helper.cpp  test_marginalization.cpp  test_marginalization_layout.cpp  test_mono_tracking.cpp  test_prior_factor.cpp  test_reprojection_factor.cpp  test_state.cpp  test_stereo_tracking.cpp  test_two_view_factor.cpp  test_vi_init_sim.cpp  test_visual_factor.cpp  test_visual_jacobian.cpp  test_vo_estimator.cpp  test_window_marginalization_plan.cpp
tassel_foxglove/: __init__.py  _config.py  _env.py  _launcher.py  env.yaml
tassel_loop/: CMakeLists.txt  geometric_verifier.cpp  geometric_verifier.h  loop_closure.cpp  loop_closure.h  loop_database.cpp  loop_database.h  loop_hypothesis_tracker.cpp  loop_hypothesis_tracker.h  loop_types.h  pnp_verifier.cpp  pnp_verifier.h  pose_graph.cpp  pose_graph.h  train_brief_vocabulary.cpp  trajectory_corrector.cpp  trajectory_corrector.h
tassel_loop/tests/: test_geometric_verifier.cpp  test_loop_closure.cpp  test_loop_database.cpp  test_loop_hypothesis_tracker.cpp  test_pnp_verifier.cpp  test_pose_graph.cpp  test_trajectory_corrector.cpp
tassel_tools/: CMakeLists.txt  README.md  __init__.py
tassel_tools/include/tassel_tools/: jacobian_checker.h  viewer.h
tassel_tools/parameters/: parameters.h  params_parser.h
tassel_tools/src/: viewer.cpp
tassel_tools/tests/: test_parameters.cpp  test_params_parser.cpp  test_viewer.cpp
tassel_tools/viewer/: __init__.py  viewer.cpp  viewer.h
tassel_tools/viewer/foxglove/: __init__.py  __main__.py  launch.py
tassel_utils/: CMakeLists.txt  constants.h  macros.h  rotation.h  se3_right_manifold.h  timer.h  triangulation.h  types.h
tassel_utils/include/tassel_utils/: camera_base.h  camera_equi.h  camera_rad_tan.h  macros.h  parameters.h  params_parser.h  timer.h  utility.h
tassel_utils/tests/: test_camera.cpp  test_params.yaml  test_params_parser.cpp
